<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/save_button"
            style="@style/onBoardingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/onBoardingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="107dp" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_textView"
            tools:layout_editor_absoluteX="169dp" />

        <TextView
            android:id="@+id/company_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_text"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="195dp" />

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_text"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="262dp" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_text"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="350dp" />

        <EditText
            android:id="@+id/company_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_textView"
            tools:layout_editor_absoluteX="171dp" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_textView"
            tools:layout_editor_absoluteX="155dp" />

        <EditText
            android:id="@+id/price_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/price_textView"
            tools:layout_editor_absoluteX="171dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>