<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.udacity.gamestore.login.LoginViewModel" />
    </data>

    <!--    The best layout for elements arranged both vertically and horizontally-->
    <!--    With other layers there would be a lot of nesting-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        tools:context=".login.LoginFragment">

        <EditText
            android:id="@+id/username"
            android:layout_width="@dimen/no_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginTop="@dimen/login_max_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:addTextChangedListener="@{loginViewModel.usernameTextWatcher}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/no_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginTop="@dimen/fragment_half_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:addTextChangedListener="@{loginViewModel.passwordTextWatcher}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/login"
            style="@style/common_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/login_button_margin"
            android:layout_marginTop="@dimen/fragment_margin"
            android:layout_marginEnd="@dimen/login_button_margin"
            android:layout_marginBottom="@dimen/login_button_margin"
            android:enabled="false"
            android:onClick="@{() -> loginViewModel.login()}"
            android:text="@string/action_sign_in"
            android:textSize="@dimen/login_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>