<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    The best layout for elements arranged both vertically and horizontally-->
    <!--    With other layers there would be a lot of nesting-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".onBoarding.WelcomeFragment">

        <TextView
            android:id="@+id/textView"
            style="@style/onBoardingText"
            android:layout_width="@dimen/no_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/fragment_margin"
            android:layout_marginEnd="@dimen/fragment_margin"
            android:text="@string/welcome_text1"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.248" />

        <TextView
            android:id="@+id/textView2"
            style="@style/onBoardingText"
            android:layout_width="@dimen/no_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/fragment_margin"
            android:layout_marginEnd="@dimen/fragment_margin"
            android:text="@string/welcome_text_2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/next_button"
            style="@style/common_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_next_button"
            android:textColorHint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>